Add fields to the HTML view

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-
+  <h1>Library</h1>
+  <form class="form" action="index.html" method="post">
+    <label for="book">Book:</label>
+    <input type="text" name="book" placeholder="Book name">
+    <input type="submit" name="submit" value="Submit">
+  </form>
 </body>
 
 </html>
