Add the table header and a DOM function to show books

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
 <body>
   <h1>Library</h1>
+  <div class="container">
+    <table id="bookShelf">
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Year</th>
+        <th>Read</th>
+      </tr>
+    </table>
+  </div>
 </body>
 
 </html>
