Add for for adding books and button to submit inforamtion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 <body>
   <h1>Library</h1>
   <div class="container">
+    <form action="" id="bookForm">
+      <label for="title">Title</label>
+      <input type="text" name="title" id="inputTitle">
+      <label for="author">Author</label>
+      <input type="text" name="author" id="inputAuthor">
+      <label for="year">Year</label>
+      <input type="text" name="year" id="inputYear">
+      <label for="read">Read?</label>
+      <input type="checkbox" name="read" id="inputRead">
+      <input type="button" value="Submit" id="inputButton">
+    </form>
     <table id="bookShelf">
       <tr>
         <th>Title</th>
