Fix a bug when showing the Library

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div class="container">
     <form action="" id="bookForm">
       <label for="title">Title</label>
-      <input type="text" name="title" id="inputTitle">
+      <input type="text" name="title" id="inputTitle"><br>
       <label for="author">Author</label>
-      <input type="text" name="author" id="inputAuthor">
+      <input type="text" name="author" id="inputAuthor"><br>
       <label for="year">Year</label>
-      <input type="text" name="year" id="inputYear">
+      <input type="text" name="year" id="inputYear"><br>
       <label for="read">Read?</label>
-      <input type="checkbox" name="read" id="inputRead">
+      <input type="checkbox" name="read" id="inputRead"><br>
       <input type="button" value="Submit" id="inputButton">
     </form>
     <table id="bookShelf">
@@ -31,6 +31,8 @@
         <th>Year</th>
         <th>Read</th>
       </tr>
+      <tbody id="bookShelfContent">
+      </tbody>
     </table>
   </div>
 </body>
