Add missing "pages" parameter for the book

--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
       <input type="text" name="author" id="inputAuthor"><br>
       <label for="year">Year</label>
       <input type="text" name="year" id="inputYear"><br>
+      <label for="pages">Pages</label>
+      <input type="number" name="pages" id="inputPages"><br>
       <label for="read">Read?</label>
       <input type="checkbox" name="read" id="inputRead"><br>
-      <input type="button" value="Submit" id="inputButton">
+      <input type="button" value="Add book" id="inputButton">
     </form>
     <table id="bookShelf">
       <tr>
         <th>Title</th>
         <th>Author</th>
         <th>Year</th>
+        <th>Pages</th>
         <th>Read</th>
       </tr>
       <tbody id="bookShelfContent">
