Add a delete link to the table row

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <th>Year</th>
         <th>Pages</th>
         <th>Read</th>
+        <th>Delete</th>
       </tr>
       <tbody id="bookShelfContent">
       </tbody>
