Add read toggle functionality

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       <input type="text" name="year" id="inputYear"><br>
       <label for="pages">Pages</label>
       <input type="number" name="pages" id="inputPages"><br>
-      <label for="read">Read?</label>
-      <input type="checkbox" name="read" id="inputRead"><br>
       <input type="button" value="Add book" id="inputButton">
     </form>
     <table id="bookShelf">
@@ -33,6 +31,7 @@
         <th>Year</th>
         <th>Pages</th>
         <th>Read</th>
+        <th>Toggle read</th>
         <th>Delete</th>
       </tr>
       <tbody id="bookShelfContent">
